<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutDetalhes"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="179dp"
            app:layout_constraintBottom_toBottomOf="@+id/txtViewHomeNotas"
            app:layout_constraintTop_toBottomOf="@+id/txtViewHomeNotas"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/txtViewHomeFilmes"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:text="@string/FilmesString"
                android:textAlignment="center"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.46"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtViewHomeLancamentos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/LatestsString"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewHomeFilmes" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewHomeLancamentos"
                android:layout_width="382dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewHomeLancamentos" />

            <TextView
                android:id="@+id/txtViewHomeNotas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/BetterRating"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeLancamentos" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewHomeNotas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewHomeNotas"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txtViewHomePopulares"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/PopularString"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeNotas" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewHomePopulares"
                android:layout_width="0dp"
                android:layout_height="181dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewHomePopulares" />


            <TextView
                android:id="@+id/txtviewFilmesCinemasHoje"
                android:layout_width="0dp"
                android:layout_height="27dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/NowCinemaString"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomePopulares" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewHomeCinema"
                android:layout_width="0dp"
                android:layout_height="181dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtviewFilmesCinemasHoje" />

            <TextView
                android:id="@+id/txtViewHomeSeries"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/SeriesString"
                android:textAlignment="center"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeCinema" />

            <TextView
                android:id="@+id/txtViewHomeSeriesPopulares"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/SeriesPopularesString"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewHomeSeries" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewHomeSeriesPopulares"
                android:layout_width="0dp"
                android:layout_height="181dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewHomeSeriesPopulares">

            </android.support.v7.widget.RecyclerView>

            <TextView
                android:id="@+id/txtViewHomeSeriesRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/SeriesBetterRatingString"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHomeSeriesPopulares" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewHomeSeriesRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtViewHomeSeriesRating">

            </android.support.v7.widget.RecyclerView>


        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>